--- a/loon.conf
+++ b/loon.conf
@@ -86,7 +86,7 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 TikTok = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/TikTok_1.png
 大陆抖音 = select,DIRECT,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok_2.png
 人工智能 = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/ChatGPT/ChatGPT4.png
-港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png
+港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png  
 境外网站 = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Github = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/GitHub.png
 Google = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
@@ -123,9 +123,9 @@ Microsoft = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点
 # --------------------------------  
 # 👇故障转移(fallback：按顺序选择可用的策略中最靠前的策略,可调小timeout(测试等待的最长时间)参数让缓慢线路标记为不可用)
 故障转移 = fallback,全部_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/SSID.png
-香港故障转移 = fallback,香港_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png
+香港故障转移 = fallback,香港_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/HK.png  
 台湾故障转移 = fallback,台湾_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png
-新加坡故障转移 = fallback,新加坡_节点,interval = 60,max-timeout = 2000,img-url = https://gitlab.com/lodepuly/iconlibrary/-/raw/main/Flag_icon/120px/MO.png
+新加坡故障转移 = fallback,新加坡_节点,interval = 60,max-timeout = 2000,img-url = https://gitlab.com/lodepuly/iconlibrary/-/raw/main/Flag_icon/120px/MO.png  
 澳门故障转移 = fallback,澳门_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png
 日本故障转移 = fallback,日本_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
 韩国故障转移 = fallback,韩国_节点,interval = 60,max-timeout = 2000,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png
@@ -138,7 +138,7 @@ Microsoft = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点
 台湾负载均衡 = load-balance,台湾_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/TW.png  
 新加坡负载均衡 = load-balance,新加坡_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/SG.png      
 澳门负载均衡 = load-balance,澳门_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://gitlab.com/lodepuly/iconlibrary/-/raw/main/Flag_icon/120px/MO.png
-日本负载均衡 = load-balance,日本_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png
+日本负载均衡 = load-balance,日本_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/JP.png  
 韩国负载均衡 = load-balance,韩国_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/KR.png  
 美国负载均衡 = load-balance,美国_节点,interval = 60,max-timeout = 2000,algorithm = pcc,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/US.png
 # --------------------------------  
@@ -161,7 +161,7 @@ Microsoft = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点
 [Rule]
 # Local Rule
 # Type:DOMAIN-SUFFIX,DOMAIN,DOMAIN-KEYWORD,USER-AGENT,URL-REGEX,IP-CIDR,IP-CIDR6,IP-ASN
-# Strategy:DIRECT,Proxy,REJECT
+# Strategy:DIRECT,Proxy,REJECT  
 # Options:no-resolve(no-resolve(only for cidr))
 # IP-CIDR,192.168.0.0/16,DIRECT
 # IP-CIDR,10.0.0.0/8,DIRECT
@@ -180,19 +180,19 @@ FINAL,兜底后备
 # 👇远程分流规则
 #======================================#  
 [Remote Rule]
-https://github.com/ACL4SSR/ACL4SSR/blob/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
-https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/XiaoHongShu/XiaoHongShu.list, policy=DIRECT, tag=小红书, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=false
-https://github.com/blackmatrix7/ios_rule_script/raw/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=false
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true  
+https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/XiaoHongShu/XiaoHongShu.list, policy=DIRECT, tag=小红书, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=false  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=false
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
 https://rule.kelee.one/Loon/Threads.list, policy=香港节点, tag=Threads, enabled=true
 https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
 https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
-https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
+https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true  
 https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
@@ -203,15 +203,17 @@ https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, ena
 https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
 https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
-https://github.com/blackmatrix7/ios_rule_script/blob/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true  
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=大陆网站, enabled=true
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=国内网站, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaDomain.list, policy=DIRECT, tag=国内常见域名、直连CDN, enabled=true  
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaIp.list, policy=DIRECT, tag=IPIP国内地址段, enabled=true   
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=按ASN分流中国大陆IP与域名直连, enabled=true  
 
 #======================================#  
 # 👇Host
@@ -253,7 +255,7 @@ https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/blockAds.plugin, ena
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/spotify.plugin, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/spotify.png, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/Auto_Join_TF.plugin, policy=兜底后备, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true  
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=true
 https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=兜底后备, enabled=true
 https://raw.githubusercontent.com/sub-store-org/Sub-Store/master/config/Loon.plugin, policy=兜底后备, enabled=true
