--- a/loon.conf
+++ b/loon.conf
@@ -79,19 +79,20 @@ bypass-tun = 10.0.0.0/8, 100.64.0.0/10, 127.0.0.0/8, 169.254.0.0/16, 172.16.0.0/
 [Proxy Group]     
 # --------------------------------  
 # 👇手动选择APP节点                    
-全部节点 = select,全部_节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
-延迟最低 = url-test,全部_节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png  
+全部节点 = select,DIRECT,全部_节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/Global.png
+延迟最低 = url-test,全部_节点,interval = 60,tolerance = 50,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Download.png
 策略选择 = select,延迟最低,全部节点,负载均衡,故障转移,香港节点,台湾节点,澳门节点,日本节点,韩国节点,新加坡节点,美国节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Back.png
+境外网站 = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 游戏手动 = select,游戏_节点,img-url = https://raw.githubusercontent.com/Orz-3/mini/master/Color/GAME.png
 TikTok = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/TikTok_1.png
 大陆抖音 = select,DIRECT,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/TikTok_2.png
+港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png
 人工智能 = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/chxm1023/Script_X/main/icon/ChatGPT/ChatGPT4.png
-港台番剧 = select,DIRECT,台湾节点,香港节点,url = http://cp.cloudflare.com/generate_204,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/StreamingSE.png  
-境外网站 = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://ghproxy.com/https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Global.png
 Github = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/GitHub.png
 Google = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Google_Search.png
 YouTube = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/YouTube.png
 Telegram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Telegram.png
+Discord = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Discord.png
 Instagram = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Instagram.png
 Facebook = select,延迟最低,香港节点,台湾节点,日本节点,韩国节点,新加坡节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Facebook.png
 Spotify = select,延迟最低,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,全部节点,策略选择,img-url = https://raw.githubusercontent.com/Koolson/Qure/master/IconSet/Color/Spotify.png
@@ -180,20 +181,21 @@ FINAL,兜底后备
 # 👇远程分流规则
 #======================================#  
 [Remote Rule]
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true  
-https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/XiaoHongShu/XiaoHongShu.list, policy=DIRECT, tag=小红书, enabled=true  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=false  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=false
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/BanAD.list, policy=REJECT, tag=去广告规则-无副作用, enabled=true
+https://kelee.one/Tool/Loon/Rule/AI.list, policy=人工智能, tag=AI, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/XiaoHongShu/XiaoHongShu.list, policy=DIRECT, tag=小红书, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
 https://rule.kelee.one/Loon/Threads.list, policy=香港节点, tag=Threads, enabled=true
 https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
-https://rule.kelee.one/Loon/Steam.list, policy=香港节点, tag=Steam.list, enabled=true
-https://rule.kelee.one/Loon/Telegram.list, policy=Telegram, tag=Telegram, enabled=true  
-https://raw.githubusercontent.com/Semporia/TikTok-Unlock/master/Loon/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
+https://rule.kelee.one/Loon/Steam.list, policy=延迟最低, tag=Steam.list, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Discord/Discord.list, policy=Discord, tag=Discord, enabled=true
+https://kelee.one/Tool/Loon/Rule/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
 https://rule.kelee.one/Loon/Netflix.list, policy=Netflix, tag=Netflix, enabled=true
 https://rule.kelee.one/Loon/YouTube.list, policy=YouTube, tag=Youtube, enabled=true
 https://rule.kelee.one/Loon/Disney.list, policy=Disney, tag=Disney, enabled=true
@@ -203,17 +205,17 @@ https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, ena
 https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
 https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true  
-https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true  
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Microsoft/Microsoft.list, policy=Microsoft, tag=Microsoft, enabled=true
+https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global.list, policy=境外网站, tag=境外域名, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Global/Global_Domain.list, policy=境外网站, tag=境外域名补充, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true  
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/LAN.list, policy=DIRECT, tag=LAN, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/GeoIP_CN.list, policy=DIRECT, tag=大陆网站, enabled=true
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaDomain.list, policy=DIRECT, tag=国内常见域名、直连CDN, enabled=true  
-https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaIp.list, policy=DIRECT, tag=IPIP国内地址段, enabled=true   
-https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=按ASN分流中国大陆IP与域名直连, enabled=true  
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaDomain.list, policy=DIRECT, tag=国内常见域名、直连CDN, enabled=true
+https://raw.githubusercontent.com/ACL4SSR/ACL4SSR/refs/heads/master/Clash/ChinaIp.list, policy=DIRECT, tag=IPIP国内地址段, enabled=true
+https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.China.list, policy=DIRECT, tag=按ASN分流中国大陆IP与域名直连, enabled=true
 
 #======================================#  
 # 👇Host
@@ -249,17 +251,19 @@ https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/ruleset/ASN.Chin
 # 👇插件资源
 #======================================#
 [Plugin]
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/blockAds.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/SevenCat_remove_ads.plugin, enabled=true
+https://kelee.one/Tool/Loon/Plugin/DragonRead_remove_ads.plugin, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/cookies.plugin, enabled=false
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/weibo.plugin, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/blockAds.plugin, enabled=true
 https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/WexinMiniPrograms_Remove_ads.plugin, enabled=true
 https://raw.githubusercontent.com/app2smile/rules/master/plugin/spotify.plugin, img-url=https://raw.githubusercontent.com/fmz200/wool_scripts/main/icons/apps/spotify.png, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/Auto_Join_TF.plugin, policy=兜底后备, enabled=false
-https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true  
+https://github.com/fmz200/wool_scripts/raw/main/Loon/plugin/Auto_Join_TF.plugin, policy=策略选择, enabled=false
+https://raw.githubusercontent.com/Tartarus2014/Loon-Script/master/Plugin/skip-proxy.plugin, img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Alpha/Imm.png, enabled=true
 https://raw.githubusercontent.com/VirgilClyne/GetSomeFries/main/plugin/HTTPDNS.Block.plugin, enabled=true
-https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=兜底后备, enabled=true
-https://raw.githubusercontent.com/sub-store-org/Sub-Store/master/config/Loon.plugin, policy=兜底后备, enabled=true
-https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, policy=兜底后备, enabled=true
+https://raw.githubusercontent.com/chavyleung/scripts/master/box/rewrite/boxjs.rewrite.loon.plugin, policy=策略选择, enabled=true
+https://raw.githubusercontent.com/sub-store-org/Sub-Store/master/config/Loon.plugin, policy=策略选择, enabled=true
+https://raw.githubusercontent.com/Script-Hub-Org/Script-Hub/main/modules/script-hub.loon.plugin, policy=策略选择, enabled=true
 [Mitm]
 hostname=
 ca-p12=
