--- a/loon.conf
+++ b/loon.conf
@@ -154,7 +154,7 @@ Microsoft = select,DIRECT,延迟最低,香港节点,台湾节点,新加坡节点
 #手动场景=ssid,default=全部节点,cellular=全部节点,"PHICOMM_5G"=DIRECT,img-url=https://raw.githubusercontent.com/Orz-3/mini/master/Color/SSID.png  
 # --------------------------------   
 # 👇兜底策略后备(fallback：按顺序选择可用的策略中最靠前的策略,可调小timeout参数让缓慢线路标记为不可用)
-兜底后备 = fallback,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,interval = 60,max-timeout = 2000,img-url = https://github.com/shindgewongxj/WHATSINStash/raw/main/icon/fallback.png
+兜底后备 = fallback,DIRECT,延迟最低,负载均衡,故障转移,香港节点,台湾节点,新加坡节点,澳门节点,日本节点,韩国节点,美国节点,interval = 60,max-timeout = 2000,img-url = https://github.com/shindgewongxj/WHATSINStash/raw/main/icon/fallback.png
 
 #======================================#  
 #👇本地规则分流
