--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -5,23 +5,25 @@
 // @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf    
 // ==/UserScript==  
 
+# > 机场订阅参数说明
+; sub=1    SSR      mu=1  SSR
+; sub=2    SS       mu=2  v2Ray
+; sub=3    v2Ray    mu=3  SSD
+; sub=4    Trojan   mu=4  Clash
+; clash=1  Clash    mu=5  Trojan
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
 ; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb  
 ; https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb  
 
-
 # > QuantumultX图标库订阅，打开以下URL，手机端点击图片即可快捷添加「1.0.30+」
 ; https://github.com/ddgksf2013/Icon/blob/master/README.md
-
 
 # > 利用描述文件屏蔽IOS更新提醒（安装后重启手机）
 ; https://d-updater.i4.cn/web/mobileconfig/iOS18.mobileconfig  
 
-
 # > 广电用户使用QuantumultX微信出现转圈现象解决方案
 ; 打开QuantumultX的兼容性增强开关[应该有改善][开关打开后微博及部分APP去广告会失效]
-
 
 # > QuantumultX @Hhpios  设置推荐        
 ; 「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
@@ -29,14 +31,19 @@
 
 # 🟢 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
 
+# =====================================
+# general：模块内为一些通用的设置参数项
+# =====================================
 [general]
-
 # > 用于节点延迟测试
 server_check_url= http://www.gstatic.com/generate_204
+
 # > 服务器测试超时时间 (毫秒)
-server_check_timeout = 2000          
+server_check_timeout = 2000
+
 # > 用于设置图标显示
-profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png  
+profile_img_url=https://github.githubassets.com/images/modules/site/integrators/google.png
+
 # > 用于Check节点IP地址(以下geo_location_checker任选一个即可)
 # 显示名称-详细地址-国旗
 ;geo_location_checker=http://ip-api.com/json/?lang=zh-CN, https://raw.githubusercontent.com/I-am-R-E/Functional-Store-Hub/Master/GeoLocationChecker/QuantumultX/IP-API.js
