--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -2,7 +2,7 @@
 // @ConfigName        自用QuantumultX配置文件
 // @Author            @Hhpios    
 // @TgChannel         https://t.me/Hhpios6    
-// @ConfigURL         https://github.com/ddgksf2013/Profile/raw/master/QuantumultX.conf    
+// @ConfigURL         https://raw.githubusercontent.com/hhpei/Tools/refs/heads/main/QuantumultX.conf  
 // ==/UserScript==  
 
 # > 机场订阅参数说明
