--- a/loon.conf
+++ b/loon.conf
@@ -188,11 +188,11 @@ https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/WeChat/WeChat.list, policy=DIRECT, tag=微信直连, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/DouYin/DouYin.list, policy=大陆抖音, tag=DouYin, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/ByteDance/ByteDance.list, policy=大陆抖音, tag=字节跳动, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=新加坡节点, tag=欧易分流, enabled=true
-https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=新加坡节点, tag=币安分流, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/OKX.list, policy=策略选择, tag=欧易分流, enabled=true
+https://github.com/fmz200/wool_scripts/raw/main/Loon/rule/Binance.list, policy=策略选择, tag=币安分流, enabled=true
 https://rule.kelee.one/Loon/BiliBili.list, policy=港台番剧, tag=BiliBili.list, enabled=true
 https://rule.kelee.one/Loon/GitHub.list, policy=Github, tag=GitHub.list, enabled=true
-https://rule.kelee.one/Loon/Steam.list, policy=延迟最低, tag=Steam.list, enabled=true
+https://rule.kelee.one/Loon/Steam.list, policy=策略选择, tag=Steam.list, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Telegram/Telegram.list, policy=Telegram, tag=Telegram, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Discord/Discord.list, policy=Discord, tag=Discord, enabled=true
 https://kelee.one/Tool/Loon/Rule/TikTok.list, policy=TikTok, tag=TikTok, enabled=true
@@ -205,7 +205,7 @@ https://rule.kelee.one/Loon/Instagram.list, policy=Instagram, tag=Instagram, ena
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Threads/Threads.list, policy=Threads, tag=Threads, enabled=true
 https://rule.kelee.one/Loon/Spotify.list, policy=Spotify, tag=Spotify, enabled=true
 https://rule.kelee.one/Loon/Google.list, policy=Google, tag=Google, enabled=true
-https://rule.kelee.one/Loon/OneDrive.list, policy=香港节点, tag=OneDrive, enabled=true
+https://rule.kelee.one/Loon/OneDrive.list, policy=策略选择, tag=OneDrive, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/AppleID/AppleID.list, policy=Apple, tag=Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple.list, policy=Apple, tag=Apple, enabled=true
 https://raw.githubusercontent.com/blackmatrix7/ios_rule_script/refs/heads/master/rule/Loon/Apple/Apple_Domain.list, policy=Apple, tag=Apple域名补充, enabled=true
