--- a/loon.conf
+++ b/loon.conf
@@ -1,4 +1,9 @@
-# Loon自用配置
+// ==UserScript==
+// @ConfigName        自用Loon配置文件
+// @Author            @Hhpios    
+// @TgChannel         https://t.me/Hhpios6    
+// @ConfigURL         https://raw.githubusercontent.com/hhpei/Tools/refs/heads/main/QuantumultX.conf  
+// ==/UserScript== 
 # 故障转移(fallback：按顺序选择可用的策略中最靠前的策略,可调小timeout(测试等待的最长时间)参数让缓慢线路标记为不可用)
 # 负载均衡(URL:测试链接配置,URL后会测试性检查,仅从可用的子策略中选取可用的策略)
 # 注意事项: 以下内容中，带“#”开头的行都是注释，去掉注释符号该行才有效
