--- a/Tool/Clash/Config/Clash.yaml
+++ b/Tool/Clash/Config/Clash.yaml
@@ -1,5 +1,7 @@
 # mihomo 配置
 # 日期：2025年5月30日20:28:48
+// @Author            @Hhpios    
+// @TgChannel         https://t.me/Hhpios6    
 # 配置作者：@Hhpios 
 # 配置地址：https://raw.githubusercontent.com/hhpei/Tools/refs/heads/main/Tool/Clash/Config/Clash.yaml
 # 适用版本：所有使用 mihomo 核心的程序
