--- a/QuantumultX.conf
+++ b/QuantumultX.conf
@@ -4,27 +4,27 @@
 // ==/UserScript==  
 
 # > 机场订阅参数说明
-; sub=1    SSR      mu=1  SSR
-; sub=2    SS       mu=2  v2Ray
-; sub=3    v2Ray    mu=3  SSD
-; sub=4    Trojan   mu=4  Clash
-; clash=1  Clash    mu=5  Trojan
+# sub=1    SSR      mu=1  SSR
+# sub=2    SS       mu=2  v2Ray
+# sub=3    v2Ray    mu=3  SSD
+# sub=4    Trojan   mu=4  Clash
+# clash=1  Clash    mu=5  Trojan
 
 # > 建议在「其他设置」里「GeoLite2」的「来源」填写使用下面链接「任选一个」，并开启「自动更新」
-; https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb  
-; https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb  
+# https://raw.githubusercontent.com/Loyalsoldier/geoip/release/Country.mmdb  
+# https://github.com/Hackl0us/GeoIP2-CN/raw/release/Country.mmdb  
 
 # > QuantumultX图标库订阅，打开以下URL，手机端点击图片即可快捷添加「1.0.30+」
-; https://github.com/ddgksf2013/Icon/blob/master/README.md
+# https://github.com/ddgksf2013/Icon/blob/master/README.md
 
 # > 利用描述文件屏蔽IOS更新提醒（安装后重启手机）
-; https://d-updater.i4.cn/web/mobileconfig/iOS18.mobileconfig  
+# https://d-updater.i4.cn/web/mobileconfig/iOS18.mobileconfig  
 
 # > 广电用户使用QuantumultX微信出现转圈现象解决方案
-; 打开QuantumultX的兼容性增强开关[应该有改善][开关打开后微博及部分APP去广告会失效]
+# 打开QuantumultX的兼容性增强开关[应该有改善][开关打开后微博及部分APP去广告会失效]
 
 # > QuantumultX @Hhpios  设置推荐        
-; 「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
+# 「通知」栏中，建议仅开启[策略检测通知]和[脚本通知]开关，「VPN」栏中，建议关闭[兼容性增强]、[分流匹配优化]和[MPM]开关
 
 
 # 🟢 以上全部内容[包括本行]可自行在配置中删除，对使用并无影响
@@ -53,7 +53,7 @@ excluded_routes=239.255.255.250/32, 24.105.30.129/32, 185.60.112.157/32, 185.60.
 # udp_whitelist=1-442, 444-65535
 # > 第一个filter为4g模式开启规则分流，第二个filter为其他wifi下开启规则分流，第三个wifi1修改成你路由器翻墙的wifi名开启直连模式，第四个wifi2为你公司或者其他有路由器翻墙的WiFi名走直连）
 # > 默认关闭根据wifi切换模式，如需开启，删除下方的"#"即可
-#running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
+# running_mode_trigger=filter, filter, wifi1:all_direct, wifi2: all_direct
 # > dns_exclusion_list
 dns_exclusion_list=*.10099.com.cn, *.cmpassport.com, *.jegotrip.com.cn, *.icitymobile.mobi, id6.me, *.pingan.com.cn
 
@@ -256,7 +256,7 @@ final, 兜底分流
 
 [http_backend]
 # BoxJS已不需要此配置
-;https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=true 
+# https://raw.githubusercontent.com/chavyleung/scripts/master/chavy.box.js, host=boxjs.com, tag=BoxJS, path=^/, enabled=true 
 
 [mitm]
 skip_validating_cert = true
